netlink: add netlink handler for gring (-g)
Implement "ethtool -g <dev>" subcommand using ETHTOOL_MSG_RINGS_GET netlink
message. This retrieves and displays device ring sizes, traditionally
provided by ETHTOOL_GRINGPARAM ioctl request.

Also register the callback with monitor code so that the monitor can
display ETHTOOL_MSG_RINGS_NTF notifications.

Signed-off-by: Michal Kubecek <mkubecek@suse.cz>

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,7 @@ ethtool_SOURCES += \
 		  netlink/monitor.c netlink/bitset.c netlink/bitset.h \
 		  netlink/settings.c netlink/parser.c netlink/parser.h \
 		  netlink/permaddr.c netlink/prettymsg.c netlink/prettymsg.h \
-		  netlink/features.c netlink/privflags.c \
+		  netlink/features.c netlink/privflags.c netlink/rings.c \
 		  netlink/desc-ethtool.c netlink/desc-genlctrl.c \
 		  netlink/desc-rtnl.c \
 		  uapi/linux/ethtool_netlink.h \
