netlink: add netlink handler for gpause (-a)
Implement "ethtool -a <dev>" subcommand using ETHTOOL_MSG_PAUSE_GET netlink
message. This retrieves and diaplays device pause parameters, traditionally
provided by ETHTOOL_GPAUSEPARAM ioctl request.

Also register the callback with monitor code so that the monitor can
display ETHTOOL_MSG_PAUSE_NTF notifications. When in monitor mode,
negotiated status is not displayed.

Signed-off-by: Michal Kubecek <mkubecek@suse.cz>

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,7 @@ ethtool_SOURCES += \
 		  netlink/settings.c netlink/parser.c netlink/parser.h \
 		  netlink/permaddr.c netlink/prettymsg.c netlink/prettymsg.h \
 		  netlink/features.c netlink/privflags.c netlink/rings.c \
-		  netlink/channels.c netlink/coalesce.c \
+		  netlink/channels.c netlink/coalesce.c netlink/pause.c \
 		  netlink/desc-ethtool.c netlink/desc-genlctrl.c \
 		  netlink/desc-rtnl.c \
 		  uapi/linux/ethtool_netlink.h \
