netlink: add netlink handler for geee (--show-eee)
Implement "ethtool --show-eee <dev>" subcommand using ETHTOOL_MSG_EEE_GET
netlink message. This retrieves and displays device coalescing parameters,
traditionally provided by ETHTOOL_GEEE ioctl request.

Also register the callback with monitor code so that the monitor can
display ETHTOOL_MSG_EEE_NTF notifications.

Signed-off-by: Michal Kubecek <mkubecek@suse.cz>

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,6 +33,7 @@ ethtool_SOURCES += \
 		  netlink/permaddr.c netlink/prettymsg.c netlink/prettymsg.h \
 		  netlink/features.c netlink/privflags.c netlink/rings.c \
 		  netlink/channels.c netlink/coalesce.c netlink/pause.c \
+		  netlink/eee.c \
 		  netlink/desc-ethtool.c netlink/desc-genlctrl.c \
 		  netlink/desc-rtnl.c \
 		  uapi/linux/ethtool_netlink.h \
