selftest: omit test-features if netlink is enabled
The test-features selftest is checking data structures passed to ioctl()
syscall. Therefore a complete rework of the test framework will be needed
to be able to perform an equivalent selftest for netlink interface. Until
such framework is implemented, disable test-features when building ethtool
with netlink support.

Signed-off-by: Michal Kubecek <mkubecek@suse.cz>

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,12 +40,16 @@ AM_CPPFLAGS += @MNL_CFLAGS@
 LDADD += @MNL_LIBS@
 endif
 
-TESTS = test-cmdline test-features
-check_PROGRAMS = test-cmdline test-features
+TESTS = test-cmdline
+check_PROGRAMS = test-cmdline
 test_cmdline_SOURCES = test-cmdline.c test-common.c $(ethtool_SOURCES) 
 test_cmdline_CFLAGS = -DTEST_ETHTOOL
+if !ETHTOOL_ENABLE_NETLINK
+TESTS += test-features
+check_PROGRAMS += test-features
 test_features_SOURCES = test-features.c test-common.c $(ethtool_SOURCES) 
 test_features_CFLAGS = -DTEST_ETHTOOL
+endif
 
 dist-hook:
 	cp $(top_srcdir)/ethtool.spec $(distdir)
